--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -16,9 +16,9 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
-$primary-color           : #f04e37;
-$secondary-color         : #3d302a;
-$tertiary-color          : #c33c;
+$primary-color           : #ec3633;
+$secondary-color         : #394c58;
+$tertiary-color          : #6f93a5;
 $success-color           : #26de81;
 $danger-color            : #fc5c65;
 $warning-color           : #fed330;
