--- a/assets/scss/modules/header.scss
+++ b/assets/scss/modules/header.scss
@@ -1,1 +1,24 @@
-.header {}
+.header {
+
+  &__top-menu-logo-img {
+    max-width: 65px;
+    margin: 0;
+  }
+  &__top-menu-logo {
+    flex: 1 1 15%;
+  }
+
+  &__top-menu-nav {
+    flex: 1 1 60%;
+    display: flex;
+    justify-content: flex-start;
+  }
+  &__top-menu-phone {
+    flex: 1 1 25%;
+  }
+  &__top-menu {
+    display: flex;
+    align-items: center;
+    padding: 25px 0;
+  }
+}
