--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,15 +11,6 @@ html {
   font-size: $mainFontSize;
   color: $mainFontColor;
   height: 100%;
-  @media screen and (max-width: $lgDesktopWidth) {
-		font-size: 16px;
-  }
-  @media screen and (max-width: $tableWidth) {
-		font-size: 15px;
-  }
-  @media screen and (max-width: $phoneWidth) {
-		font-size: 14px;
-  }
 }
 
 body {
@@ -88,3 +79,5 @@ section, .section {
 @import "./modules/main";
 @import "./modules/footer";
 
+
+@import "./utils/media";
