--- a/assets/scss/modules/main.scss
+++ b/assets/scss/modules/main.scss
@@ -1,1 +1,24 @@
 .main {}
+
+.banner-title {
+  font-size: 60px;
+  line-height: 1.2;
+  color: #fff;
+  margin-bottom: 40px;
+}
+.banner-subtitle {
+  display: block;
+  font-size: 25px;
+  line-height: 1.2;
+  color: #fff;
+  margin-bottom: 8px;
+}
+.card {
+  width: 100%;
+
+  &__img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+}
