--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -7,6 +7,7 @@
 .py-50 {padding-top: 50px;padding-bottom: 50px;}
 .pr-15 {padding-right: 15px;}
 .pl-15 {padding-left: 15px;}
+.p-15 {padding: 15px;}
 .mb-15 {margin-bottom: 15px;}
 .mb-30 {margin-bottom: 30px;}
 .mb-35 {margin-bottom: 35px;}
