--- a/assets/scss/utils/media.scss
+++ b/assets/scss/utils/media.scss
@@ -1,30 +1,38 @@
-@media screen and (max-width: $lgDesktopWidth) {
-  html, body {
+html, body {
+  @media screen and (max-width: $lgDesktopWidth) {
     font-size: $mainFontSize;
   }
-}
-@media screen and (max-width: $mdDesktopWidth) {
-  html, body {
+  @media screen and (max-width: $mdDesktopWidth) {
     font-size: 17px;
   }
-}
-@media screen and (max-width: $smDesktopWidth) {
-  html, body {
+  @media screen and (max-width: $smDesktopWidth) {
     font-size: 16px;
   }
-}
-@media screen and (max-width: $tableWidth) {
-  html, body {
+  @media screen and (max-width: $tableWidth) {
     font-size: 15px;
   }
-}
-@media screen and (max-width: $phoneWidth) {
-  html, body {
+  @media screen and (max-width: $phoneWidth) {
     font-size: 14px;
   }
-}
-@media screen and (max-width: $smPhoneWidth) {
-  html, body {
+  @media screen and (max-width: $smPhoneWidth) {
     font-size: 12px;
+  }
+}
+.container {
+
+  @media screen and (max-width: $lgDesktopWidth) {
+    max-width: $mdDesktopWidth;
+  }
+  @media screen and (max-width: $mdDesktopWidth) {
+    max-width: $smDesktopWidth;
+  }
+  @media screen and (max-width: $smDesktopWidth) {
+    max-width: $tableWidth;
+  }
+  @media screen and (max-width: $tableWidth) {
+    max-width: $phoneWidth;
+  }
+  @media screen and (max-width: $phoneWidth) {
+    max-width: $smPhoneWidth;
   }
 }
