change index page

--- a/assets/less/antd.less
+++ b/assets/less/antd.less
@@ -1,6 +1,6 @@
 @import "~ant-design-vue/dist/antd";
 
-@primary-color: #ec3633; // primary color for all components
+@primary-color: #394c58; // primary color for all components
 @link-color: #ec3633; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
