--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -15,11 +15,11 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
-$primary-color           : #ec3633;
-$secondary-color         : #394c58;
-$tertiary-color          : #6f93a5;
+$primary-color           : #394c58;
+$secondary-color         : #6f93a5;
+//$tertiary-color          : #6f93a5;
 $success-color           : #26de81;
-$danger-color            : #fc5c65;
+$danger-color            : #ec3633;
 $warning-color           : #fed330;
 $purple-color            : #8854d0;
 $light-color             : #ffffff;
