--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -1,4 +1,8 @@
 // Base
+.h1, .h2, .h3, .h4, .h5 {
+  margin: 0;
+  line-height: 1.5;
+}
 .px-15 {padding-left: 15px;padding-right: 15px;}
 .px-30 {padding-left: 30px;padding-right: 30px;}
 .px-50 {padding-left: 50px;padding-right: 50px;}
@@ -8,6 +12,7 @@
 .pr-15 {padding-right: 15px;}
 .pl-15 {padding-left: 15px;}
 .p-15 {padding: 15px;}
+.pb-10 {padding-bottom: 10px;}
 .mb-15 {margin-bottom: 15px;}
 .mb-30 {margin-bottom: 30px;}
 .mb-35 {margin-bottom: 35px;}
@@ -30,7 +35,6 @@
   font-weight: 400;
   padding: 15px 7px;
   margin: 0;
-  border: 1px solid #000;
   display: inline-block;
   transition-duration: 0.5s;
   text-align: center;
@@ -49,129 +53,39 @@
 .color--secondary {
   color: $secondary-color;
 }
-.def-spacing {
-  margin-bottom: 200px;
-}
-.bg--fon-1 {
-  background-color: #f8f5f2;
-}
-.bg--fon-2 {
-  background-color: #3d302a;
-}
-
-// Custom
-.icon {
-  display: inline-block;
-  //width: 50px;
-  height: 45px;
-}
-.btn-primary {
-  border-color: $primary-color;
-  color: #000;
-}
-.btn-primary:hover, .btn-primary:active {
-  background-color: $primary-color;
-  color: #fff;
-}
-.btn-secondary {
-  border-color: $secondary-color;
-  color: #000;
-}
-.btn-secondary:hover, .btn-secondary:active {
-  background-color: $secondary-color;
-  color: #fff;
-}
-.btn-header {
-  background-color: $primary-color;
-  border-radius: 22px;
-  padding: 15px 40px;
-  font-size: 13px;
-  color: #fff;
-  line-height: 1;
-  white-space: nowrap;
-}
 ::placeholder {
   color: $neutral-placeholder;
 }
-.btn-buy {
-  padding: 7px 15px;
-  background-color: $primary-color;
-  border: 0;
-  white-space: nowrap;
-  font-size: 13px;
-  font-weight: 400;
-  text-transform: uppercase;
-  line-height: 2;
-  color: #fff;
-  width: 100%;
+.text-danger {
+  color: $danger-color;
 }
-.btn-buy:hover {
-  background-color: rgba(240, 78, 55, 0.8);
-}
-.btn-buy-collection {
-  width: 100%;
-  font-size: 13px;
-  font-weight: 400;
-  text-transform: uppercase;
-  line-height: 1.7;
-  background-color: $primary-color;
-  color: #fff;
-}
-.btn-buy-collection:hover {
-  background-color: rgba(240, 78, 55, 0.8);
-}
-.btn-qbuy {
-  padding: 7px 31px;
-  background-color: $primary-color;
-  border: 0;
-  white-space: nowrap;
-  font-size: 13px;
-  font-weight: 400;
-  text-transform: uppercase;
-  line-height: 2;
-  color: #fff;
-}
-.btn-qbuy:hover {
-  background-color: rgba(240, 78, 55, 0.8);
-}
-.w-650 {
-  max-width: 650px;
-}
-// Fix mobileMenu
-.bm-burger-button {
-  right: 16px!important;
-  width: 31px!important;
-  position: relative!important;
-  left: 0!important;
-  top: 0!important;
-}
-.bm-menu {
-  background-color: #fff!important;
-}
-.bm-overlay {
-  background-color: transparent!important;
-}
-.bm-overlay::before {
-  content: '';
-  z-index: 999999;
-  background-color: rgba(0,0,0, 0.6);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 300px;
 
+.h1 {}
+.h2 {}
+.h3 {}
+.h4 {
+  font-size: 24px;
 }
-// Fix element control
-input {
-  background-color: transparent!important;
+.text-primary {
+  color: $primary-color;
 }
-.slick-prev::before, .slick-next::before {
-  display: none;
+.text-center {
+  text-align: center;
 }
-.slick-prev, .slick-next {
-  i {
-    font-size: 20px;
-    color: $primary-color;
-  }
+.form-label {
+  display: inline-block;
+  padding-bottom: 8px;
+}
+.d-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+.justify-content-center {
+  justify-content: center;
+}
+.justify-content-end {
+  justify-content: flex-end;
+}
+.align-items-center {
+  align-items: center;
 }
