--- a/assets/less/antd.less
+++ b/assets/less/antd.less
@@ -14,3 +14,4 @@
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 
+//.ant-btn-primary[disabled] {background-color: rgba(57, 76, 88, 0.5);}
