adding FeaturesList & FeaturesCard & oracle.page - done

--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -17,7 +17,7 @@ $smPhoneWidth            : 320px;
 // Main color
 $primary-color           : #394c58;
 $secondary-color         : #6f93a5;
-//$tertiary-color          : #6f93a5;
+$tertiary-color          : #0E1F58;
 $success-color           : #26de81;
 $danger-color            : #ec3633;
 $warning-color           : #fed330;
@@ -26,7 +26,7 @@ $light-color             : #ffffff;
 $dark-color              : #000000;
 
 // Neutral Color
-$neutral-primary         : #939393;
+$neutral-primary         : rgb(252, 252, 252);
 $neutral-regular         : #2f2f2f;
 $neutral-secondary       : #dcdcdc;
 $neutral-placeholder     : #c5c5c5;
