--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -9,6 +9,7 @@
 .py-15 {padding-top: 15px;padding-bottom: 15px;}
 .py-30 {padding-top: 30px;padding-bottom: 30px;}
 .py-50 {padding-top: 50px;padding-bottom: 50px;}
+.py-60 {padding-top: 60px;padding-bottom: 60px;}
 .pr-15 {padding-right: 15px;}
 .pl-15 {padding-left: 15px;}
 .p-15 {padding: 15px;}
@@ -21,6 +22,7 @@
 .mb-90 {margin-bottom: 90px;}
 .mr-15 {margin-right: 15px;}
 .ml-15 {margin-left: 15px;}
+.my-30 {margin-bottom: 30px; margin-top: 30px;}
 .w-100 {width: 100%;}
 .h-100 {height: 100%;}
 .w-50 {width: 50%;}
@@ -88,4 +90,7 @@
 }
 .align-items-center {
   align-items: center;
+}
+.bg-neutral-primary {
+  background-color: $neutral-primary;
 }
