--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -15,13 +15,13 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
-$primary-color           : #394c58;
-$secondary-color         : #6f93a5;
-$tertiary-color          : #0E1F58;
-$success-color           : #26de81;
-$danger-color            : #ec3633;
-$warning-color           : #fed330;
-$purple-color            : #8854d0;
+$primary-color           : hsl(203, 21%, 28%);
+$secondary-color         : hsl(200, 23%, 54%);
+$tertiary-color          : hsl(226, 73%, 20%);
+$success-color           : hsl(150, 74%, 51%);
+$danger-color            : hsl(1, 83%, 56%);
+$warning-color           : hsl(47, 99%, 59%);
+$purple-color            : hsl(265, 57%, 57%);
 $light-color             : #ffffff;
 $dark-color              : #000000;
 
