--- a/assets/less/antd.less
+++ b/assets/less/antd.less
@@ -1,10 +1,10 @@
 @import "~ant-design-vue/dist/antd";
 
 @primary-color: #394c58; // primary color for all components
-@link-color: #ec3633; // link color
+@link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
-@error-color: #f5222d; // error state color
+@error-color: rgb(236, 54, 51); // error state color
 @font-size-base: 14px; // major text font size
 @heading-color: rgba(0, 0, 0, 0.85); // heading text color
 @text-color: rgba(0, 0, 0, 0.65); // major text color
