--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -10,11 +10,13 @@
 .py-30 {padding-top: 30px;padding-bottom: 30px;}
 .py-50 {padding-top: 50px;padding-bottom: 50px;}
 .py-60 {padding-top: 60px;padding-bottom: 60px;}
+.pt-50 {padding-top: 50px;}
 .pr-15 {padding-right: 15px;}
 .pl-15 {padding-left: 15px;}
 .p-15 {padding: 15px;}
 .pb-10 {padding-bottom: 10px;}
 .mb-15 {margin-bottom: 15px;}
+.mb-20 {margin-bottom: 20px;}
 .mb-30 {margin-bottom: 30px;}
 .mb-35 {margin-bottom: 35px;}
 .mb-50 {margin-bottom: 50px;}
@@ -55,21 +57,24 @@
 .color--secondary {
   color: $secondary-color;
 }
+.color--tertiary {
+  color: $tertiary-color
+}
+.color--danger {
+  color: $danger-color;
+}
 ::placeholder {
   color: $neutral-placeholder;
 }
-.text-danger {
-  color: $danger-color;
-}
+
 
 .h1 {}
-.h2 {}
+.h2 {
+  font-size: 32px;
+}
 .h3 {}
 .h4 {
   font-size: 24px;
-}
-.text-primary {
-  color: $primary-color;
 }
 .text-center {
   text-align: center;
@@ -93,4 +98,13 @@
 }
 .bg-neutral-primary {
   background-color: $neutral-primary;
+}
+.text-uppercase {
+  text-transform: uppercase;
+}
+.text-bold {
+  font-weight: 700;
+}
+.w--490 {
+  max-width: 490px;
 }
