--- a/assets/scss/modules/header.scss
+++ b/assets/scss/modules/header.scss
@@ -1,7 +1,6 @@
 .header {
   position: sticky;
   top: 0;
-  background-color: #fff;
   z-index: 100;
 
   &__top-menu-logo-img {
@@ -28,4 +27,13 @@
     align-items: center;
     padding: 0;
   }
+  .ant-menu {
+    background-color: transparent;
+  }
+}
+.header--fixed {
+  background-color: #fff;
+}
+.header--scroll {
+  background-color: rgba(255, 255, 255, 0.9);
 }
