--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -85,6 +85,9 @@
 .text-center {
   text-align: center;
 }
+.text-left{
+  text-align: left;
+}
 .form-label {
   display: inline-block;
   padding-bottom: 8px;
@@ -119,4 +122,8 @@
 }
 .w-100 {
   width: 100%;
+}
+.big--icon svg {
+  width: 60px;
+  height: 60px;
 }
