--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -1,5 +1,5 @@
 // Font
-$mainFont                : 'Roboto', sans-serif;
+$mainFont                : 'Montserrat', sans-serif;
 
 // Size
 $mainFontColor           : #000;
