--- a/assets/scss/utils/fonts.scss
+++ b/assets/scss/utils/fonts.scss
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
