--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -19,6 +19,7 @@
 .mb-20 {margin-bottom: 20px;}
 .mb-30 {margin-bottom: 30px;}
 .mb-35 {margin-bottom: 35px;}
+.mb-40 {margin-bottom: 40px;}
 .mb-50 {margin-bottom: 50px;}
 .mb-60 {margin-bottom: 60px;}
 .mb-90 {margin-bottom: 90px;}
@@ -27,12 +28,23 @@
 .mr-15 {margin-right: 15px;}
 .ml-15 {margin-left: 15px;}
 .my-30 {margin-bottom: 30px; margin-top: 30px;}
+
 .w-100 {width: 100%;}
 .h-100 {height: 100%;}
 .w-50 {width: 50%;}
 .h-50 {height: 50%;}
+
 .text-center {text-align: center;}
+.text-left{text-align: left;}
+.text-right{text-align: right;}
 .text-uppercase {text-transform: uppercase;}
+.text-bold {font-weight: 700;}
+
+.d-flex {display: flex;flex-wrap: wrap;}
+.justify-content-start {justify-content: flex-start;}
+.justify-content-center {justify-content: center;}
+.justify-content-end {justify-content: flex-end;}
+.align-items-center {align-items: center;}
 
 .btn {
   background-color: transparent;
@@ -65,6 +77,12 @@
 .color--danger {
   color: $danger-color;
 }
+.color--black {
+  color: #000;
+}
+.color--white {
+  color: #fff;
+}
 ::placeholder {
   color: $neutral-placeholder;
 }
@@ -82,41 +100,25 @@
 .h4 {
   font-size: 24px;
 }
-.text-center {
-  text-align: center;
+
+.fz-20 {
+  font-size: 20px;
 }
-.text-left{
-  text-align: left;
-}
+
 .form-label {
   display: inline-block;
   padding-bottom: 8px;
 }
-.d-flex {
-  display: flex;
-  flex-wrap: wrap;
-}
-.justify-content-start {
-  justify-content: flex-start;
-}
-.justify-content-center {
-  justify-content: center;
-}
-.justify-content-end {
-  justify-content: flex-end;
-}
-.align-items-center {
-  align-items: center;
-}
+
 .bg-neutral-primary {
   background-color: $neutral-primary;
 }
-.text-uppercase {
-  text-transform: uppercase;
+.bg-molecular-pattern {
+  background-color: #000000;
+  background-image: url("/images/fon/molecular-background-pattern-12.jpg");
+  background-repeat: repeat;
 }
-.text-bold {
-  font-weight: 700;
-}
+
 .w--490 {
   max-width: 490px;
 }
