--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -31,3 +31,6 @@ $neutral-regular         : #2f2f2f;
 $neutral-secondary       : #dcdcdc;
 $neutral-placeholder     : #c5c5c5;
 
+// Fons
+$fon-1                   : rgba(109, 152, 194, 0.6);
+
