--- a/assets/scss/modules/main.scss
+++ b/assets/scss/modules/main.scss
@@ -35,4 +35,10 @@
   line-height: 1;
   display: inline-block;
 }
+.development-cards .ant-card-meta-title {
+  text-transform: uppercase;
+  color: $danger-color;
+  font-weight: 400;
+  font-size: 18px;
+}
 
