--- a/assets/scss/utils/helpers.scss
+++ b/assets/scss/utils/helpers.scss
@@ -15,6 +15,7 @@
 .pl-15 {padding-left: 15px;}
 .p-15 {padding: 15px;}
 .pb-10 {padding-bottom: 10px;}
+.pb-50 {padding-bottom: 50px;}
 .mb-15 {margin-bottom: 15px;}
 .mb-20 {margin-bottom: 20px;}
 .mb-30 {margin-bottom: 30px;}
@@ -131,6 +132,12 @@
 .big--icon svg {
   width: 60px;
   height: 60px;
+}
+.d-block {
+  display: block;
+}
+.d-inline-block {
+  display: inline-block;
 }
 .list--disk {
   padding-left: 30px;
