--- a/assets/scss/modules/banner.scss
+++ b/assets/scss/modules/banner.scss
@@ -15,11 +15,11 @@
   font-size: 25px;
   line-height: 1.2;
   color: #fff;
-  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   text-align: left;
+  padding-left: 20px;
   li {
     list-style: disc;
   }
