--- a/assets/scss/modules/main.scss
+++ b/assets/scss/modules/main.scss
@@ -8,7 +8,7 @@
 
   &__img {
     width: 100%;
-    height: 300px;
+    max-height: 210px;
     object-fit: cover;
   }
   &:hover .ant-card-meta-title {
@@ -25,9 +25,11 @@
     left: 0;
     right: 0;
     background-color: rgba(0,0,0, 0.5);
+    transition: background-color 300ms ease-in;
   }
   &:hover .ant-card-cover::before {
-    display: none;
+    //display: none;
+    background-color: transparent;
   }
 }
 .big-number {
