--- a/assets/less/antd.less
+++ b/assets/less/antd.less
@@ -25,3 +25,9 @@
   display: flex;
   align-items: center;
 }
+.ant-card-hoverable {
+  box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.54);
+  &:hover {
+    box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.64);
+  }
+}
