change index.page adding title

--- a/assets/less/antd.less
+++ b/assets/less/antd.less
@@ -26,8 +26,11 @@
   align-items: center;
 }
 .ant-card-hoverable {
-  box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.54);
+  box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.33);
   &:hover {
-    box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.64);
+    box-shadow: 4px 4px 17px 0 rgba(0,0,0,0.66);
   }
+}
+.ant-card-cover {
+  position: relative;
 }
