--- a/assets/scss/modules/main.scss
+++ b/assets/scss/modules/main.scss
@@ -11,6 +11,24 @@
     max-height: 210px;
     object-fit: cover;
   }
+  &__title {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+      font-size: 1.65rem;
+      color: $light-color;
+      text-align: center;
+      line-height: 1.5;
+      padding: 0 10px;
+      background-color: rgba(0, 0, 0, 0.6);
+    }
+  }
   &:hover .ant-card-meta-title {
     color: $secondary-color;
   }
@@ -18,6 +36,7 @@
     position: relative;
   }
   .ant-card-cover::before {
+    display: none;
     content: "";
     position: absolute;
     top: 0;
@@ -28,7 +47,6 @@
     transition: background-color 300ms ease-in;
   }
   &:hover .ant-card-cover::before {
-    //display: none;
     background-color: transparent;
   }
 }
