--- a/assets/scss/modules/header.scss
+++ b/assets/scss/modules/header.scss
@@ -30,6 +30,7 @@
     flex: 1 1 auto;
   }
   &__menu-phone {
+    font-size: 14px;
     min-width: 160px;
     display: flex;
     justify-content: flex-end;
