--- a/assets/scss/utils/fonts.scss
+++ b/assets/scss/utils/fonts.scss
@@ -1,5 +1,5 @@
 //@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
-//@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-400', 400)
-//@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-300', 300)
-//@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-700', 700)
+//@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
+@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-400', 400)
+@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-300', 300)
+@include font-face('Montserrat', '../../static/fonts/montserrat/montserrat-700', 700)
