--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,7 +23,10 @@ body {
 
 *, *:before, *:after { box-sizing: border-box; }
 
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  word-wrap: break-word;
+}
 
 a {
   text-decoration: none;
