--- a/assets/scss/utils/vars.scss
+++ b/assets/scss/utils/vars.scss
@@ -24,6 +24,7 @@ $warning-color           : hsl(47, 99%, 59%);
 $purple-color            : hsl(265, 57%, 57%);
 $light-color             : #ffffff;
 $dark-color              : #000000;
+$apricot-color           : #f5f5f5;
 
 // Neutral Color
 $neutral-primary         : rgb(252, 252, 252);
