--- a/assets/scss/modules/banner.scss
+++ b/assets/scss/modules/banner.scss
@@ -1,8 +1,14 @@
 .banner-title {
   font-size: 60px;
-  line-height: 1.2;
+  line-height: 1.1;
   color: #fff;
   margin-bottom: 40px;
+}
+.banner-title-small {
+  font-size: 32px;
+  line-height: 1.2;
+  color: #fff;
+  margin-bottom: 10px;
 }
 .banner-subtitle {
   display: block;
@@ -11,6 +17,7 @@
   color: #fff;
   margin-bottom: 8px;
 }
+
 .banner-list {
   font-size: 25px;
   line-height: 1.2;
