--- a/assets/scss/utils/media.scss
+++ b/assets/scss/utils/media.scss
@@ -133,17 +133,19 @@ html, body {
 }
 .promo {
   @media screen and (max-width: $tableWidth) {
-    flex-direction: column;
-    justify-content: center;
+    justify-content: center!important;
     &__logo {
       display: none;
     }
     &__message {
-      padding: 4px;
-      margin-bottom: 10px;
+      padding: 4px!important;
+    }
+    &__title {
+      font-size: 14px!important;
+      margin-bottom: 0!important;
     }
     &__sub-title {
-      margin-bottom: 10px;
+     display: none;
     }
   }
 }
